[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "{{ cookiecutter.module_name }}"},
    { include = "tvm"},
    { include = "octomizer_runtime", from = "octomizer-runtime" },
]
include = ["{{ cookiecutter.module_name }}/*", "tvm/**/*", "octomizer-runtime/**/*", "packaged.so" ]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
decorator = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
